<resources>
    <string name="app_name">Story App</string>
    <string name="made_by">made by Fauzan</string>
    <string name="prompt_username">Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_password">Input your password</string>
    <string name="error_username">Can\'t be less than 2 characters</string>
    <string name="error_email">Email must be correct</string>
    <string name="error_password">Password must be 6 characters</string>
    <string name="error_register">Failed to register account</string>
    <string name="check">Check your email or password</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="your_journey">Your journey start from here</string>
    <string name="photo">Photo</string>
    <string name="image_add_photo">image add photo</string>
    <string name="camera">Camera</string>
    <string name="hint_description">Tell some story</string>
    <string name="upload">Upload</string>
    <string name="gallery">Gallery</string>
    <string name="already_account">Already have an account ?</string>
    <string name="data_not_found">Oops, data not found....</string>
    <string name="try_again">Try again</string>
    <string name="log_out">Log out</string>
    <string name="upload_story">Upload story</string>
    <string name="add_story">Add Story</string>
    <string name="warning_upload">Please complete the file with the description</string>
    <string name="success_add_story">Successfully added story</string>
    <string name="error_add_story">Failed to add story, please try again</string>
    <string name="success_register">Successfully register account</string>
    <string name="warning_input">Incomplete data</string>
    <string name="settings">Settings</string>
    <string name="details">Details</string>
    <string name="image_login">Image login</string>
    <string name="image_register">Image Register</string>
    <string name="welcome">Hi! Welcome back</string>
    <string name="login_image">Login Image</string>
    <string name="not_allowed">Not allowed permission</string>
    <string name="error_no_image">No Image Selected</string>
    <string name="error_no_description">Description must be fill</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="activate_location">Please allow your location</string>
    <string name="share_location">Share your location</string>
</resources>
