<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterScreenActivity">

    <ImageView
        android:id="@+id/img_register"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:src="@drawable/img_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_register"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/your_journey"
        android:alpha="0"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_register" />

    <com.example.storyapp.customView.EditTextName
        android:id="@+id/ed_register_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="34dp"
        android:textSize="14sp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:alpha="0"
        android:background="@drawable/bg_edittext"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        />

    <com.example.storyapp.customView.EditTextEmail
        android:id="@+id/ed_register_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/bg_edittext"
        android:inputType="textEmailAddress"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="14sp"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_name" />

    <com.example.storyapp.customView.EditTextPassword
        android:id="@+id/ed_register_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/bg_edittext"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textSize="14sp"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="@+id/ed_register_email"
        app:layout_constraintStart_toStartOf="@+id/ed_register_email"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_email" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_edittext"
        android:text="@string/register"
        android:alpha="0"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/ed_register_password"
        app:layout_constraintStart_toStartOf="@+id/ed_register_password"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_password" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/already_account"
        android:fontFamily="@font/opensans_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_register"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="@+id/btn_register"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/sign_in"
        android:fontFamily="@font/opensans_bold"
        android:textColor="@color/darker_green"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/btn_register"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/btn_register"
        app:layout_constraintEnd_toEndOf="@+id/btn_register"
        app:layout_constraintStart_toStartOf="@+id/btn_register"
        app:layout_constraintTop_toTopOf="@+id/btn_register" />

</androidx.constraintlayout.widget.ConstraintLayout>